# recruitment-2024-autumn

./: .gitignore  CMakeLists.txt  README.md  build_example.sh  env.sh  main.cc
include/: SmithWaterman.hpp  Timer.hpp
src/: SmithWaterman.cc
